--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav>
-  <a href="/Journal/">Главная</a>
+  <a href="/Journal/index.html">Главная</a>
   <a href="/Journal/about">О нас</a>
   <a href="/Journal/to-authors">Авторам</a>
 </nav>
