--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,12 @@
 <nav>
-  <a href="/Journal/index.html">Главная</a>
+<!--  <a href="/Journal/index.html">Главная</a>
   <a href="/Journal/about">О нас</a>
-  <a href="/Journal/to-authors">Авторам</a>
+  <a href="/Journal/to-authors">Авторам</a> -->
+  <a href="/Journal" {% if page.url == "/Journal" %}style="color: red;"{% endif %}>
+    Главная
+  </a>
+  <a href="/Journal/about.html" {% if page.url == "/Journal/about.html" %}style="color: red;"{% endif %}>
+    О нас
+  </a>
+
 </nav>
