--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,8 +5,11 @@
   <a href="/Journal" {% if page.url == "/Journal" %}style="color: red;"{% endif %}>
     Главная
   </a>
-  <a href="/Journal/about.html" {% if page.url == "/Journal/about.html" %}style="color: red;"{% endif %}>
+  <a href="/Journal/about" {% if page.url == "/Journal/about" %}style="color: red;"{% endif %}>
     О нас
+  </a>
+  <a href="/Journal/to-authors" {% if page.url == "/Journal/to-authors" %}style="color: red;"{% endif %}>
+    Авторам
   </a>
 
 </nav>
