--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,9 @@
 <nav>
-<!--  <a href="/Journal/index.html">Главная</a>
-  <a href="/Journal/about">О нас</a>
-  <a href="/Journal/to-authors">Авторам</a> -->
-  <a href="/Journal/" {% if page.url == "/Journal/" %}style="color: red;"{% endif %}>
+  <a href="/Journal/index.html">Главная</a> |
+  <a href="/Journal/about">О нас</a> |
+  <a href="/Journal/to-authors">Авторам</a>
+
+<!--  <a href="/Journal/" {% if page.url == "/Journal/" %}style="color: red;"{% endif %}>
     Главная
   </a>
   <a href="/Journal/about/" {% if page.url == "/Journal/about/" %}style="color: red;"{% endif %}>
@@ -11,5 +12,5 @@
   <a href="/Journal/to-authors/" {% if page.url == "/Journal/to-authors/" %}style="color: red;"{% endif %}>
     Авторам
   </a>
-
+-->
 </nav>
