--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
   <a href="/Journal/index.html">Главная</a> |
   <a href="/Journal/about">О нас</a> |
   <a href="/Journal/to-authors">Авторам</a>
-
+  <a href="/Journal/nefu-issues">Выпуски</a>
 <!--  <a href="/Journal/" {% if page.url == "/Journal/" %}style="color: red;"{% endif %}>
     Главная
   </a>
